fix: viewport on mobile

--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -24,3 +24,7 @@ code {
 .back {
     margin-top: 128px;
 }
+
+.highlight {
+    overflow: auto;
+}
